# rowmance

./: .gitignore  CONTRIBUTING.md  Makefile  PLAN.md  README.md  docker-compose.yml  eslint.config.js  package.json  vite.config.ts  vitest.config.ts
.claude/: settings.local.json
.github/workflows/: cache-warmup.yml  release.yml
docs/: PLAN.md  engine-refactor-audit.md
docs/database-client-design-concepts/: README.md
scripts/: bump-version.sh
src/: app.html
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/.sqlx/: query-07adc8e4e39b21d4932e17562acb2f4cab55c4b8167b7a5e9e5dbe8fe58b582a.json  query-0a09264f1104753b941135630a4bac1a0de0f5d335df1a28ce6ca3f2da9e7d02.json  query-0c9f7469f175ef3dbfc2cf124b408b19f36ba0dc2ca58bf55c44f922084a5eac.json  query-1ac8fcf955690c5744c77b100defadbda89bc84e5e1f38346857a0fb5a6fe390.json  query-1b14ad2092ba77be9ec271b1e204020d2eca994ed51127b826374c0047f28364.json  query-2e59c47bd294fd6baccf605e0a298070ac5aaf5b4a32f4966f113120c83786d3.json  query-398f111bc97354223eb3c0a43c345faeb3e43c9672fd12b70a997778b7e40138.json  query-3e136917136675f6301510c253b442568f3819c94661c2275013c3f9461c9103.json  query-3fae18f249febb656d92854d9ff0d71933af64c5c740488f997b24e966c51a64.json  query-41f1b3957f8d6ed71f9b5274c576a733e39755725c2968f188ef4f9ede54d0f6.json  query-42c792de935b785501496a18f7efa5347f79fe7ca5f34a2de60c05ac83ac7d6b.json  query-4349f0e6cbeb3039d9bab556e565b7e79c8b4136bb3be6b0e524762c181fb6d8.json  query-573ff1649ad640d3aba5535f8a4c4eec553e609d86fd6d854f6e66be51491b3d.json  query-585baadb1d0e60b440bf7353adf98c924e492aa32856a2040094ee5dd52d2417.json  query-5a31dba56e86188da8a5adbf962641c1b2f696cc03a5114623f4f50143b62bc7.json  query-5b19c6923d8e9b49b5068c5834ced8f5f1e7dc9705a244d96848d3079a2161df.json  query-5c861209abc6712a8367153314341b56edd8e4798f2076ea7691b13fb1ae10fc.json  query-60b67f1c26d716a6d4ec6a750dd9a4b85c35f0234acb0e9f458129008ffdc00a.json  query-6a8d6f53dce99535d3147a6a0ed742755c22217940c96c941e5be456dac5974c.json  query-72b70b2b57db6938ea5f2d89ec8aa1c3a11b521b385f636525d7773d9eb3e6f3.json  query-7a945f86649d4807a14399af832387801f8ebced441da1661e9c2c39d6f3ab33.json  query-7d385ecf1fadcec2c7560f1b71a45464173a9498212eeb50400e9eda89d5ccde.json  query-845ae3bd03f93f0ea659f94d4b5c840eadc12e85445993d54fabf5572f7cf0a5.json  query-8477db4970814b33af1957330b6c20b83bf56f2056814d0b09ea44c99c092da3.json  query-8c651bd0927e33ade88d32762eaa457f5d2e7cd4f417e7f3f114c714ed45feb7.json  query-916153f8fae0a9721e4dc1afb6d1d09193eb028a794780156ad2c456ae0735a1.json  query-92ce623c59bc7d0297697bbc09ac8056e8a1d505750de2bdececec6f0de4e8e7.json  query-96ab8d4668788b7598460943a0d6feb8555165799fb6e6639f57ee3108a04dcc.json  query-a62d458f498f24c8d4b18a0bb6258bec806bbd3326fba20f61976fed706f0243.json  query-a8a5e8158aae0781d64aca5ddc421e001e7cb09f07e99c8dd9a1685f7ed711a1.json  query-acab676405fcb5cf4f4cba234155810d505da5715c8326953fb79c572c3d0067.json  query-b8b419d14b23ec77d249ebb331f2a2f362066324553caff43bfeb04e687d70b0.json  query-b97f33749923e57d7e4579b84ab151632bf3968a7fb0068f6fb6c3eb71ea204e.json  query-bb0630777ca3a6c114216cee0d08a795aba6e5b1ff674280e95108fedb5a8de9.json  query-c3bb0479607dc6c479b3d59625302e96b5f3e8a93a3a5edbb9ae6633ea8b2f30.json  query-cf0e6a69171541cfa276a8b678cc65a368aab009e25b9ad52bfc05bffcfd2352.json  query-e32c3c2c5fd7e62f85c7183dc4950a544b5aa38be86774443139de7782c3b9c9.json  query-f4a125ef83692706a0b2292ad18d44bb14d299f85cab0f149566e133211c3aa8.json  query-f684399be6eef89775bd1418c01583760ed270536380d7d51dbf49d27a74012b.json  query-f79c41c111ea7ff1a2405c05b897d4e6b571c91cfb9370f6c11c44d2da133321.json
src-tauri/.svelte-kit/: ambient.d.ts
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  lib_sql.rs  main.rs  sessions.rs  transactions.rs
src-tauri/src/commands/: connections.rs  dashboards.rs  erd.rs  export.rs  file_saved_queries.rs  history.rs  import.rs  keychain.rs  menu.rs  mod.rs  query.rs  saved_queries.rs  schema.rs  server_admin.rs  settings.rs  speed_analysis.rs  ssh.rs  themes.rs  updater.rs  users.rs  virtual_relations.rs  window.rs
src-tauri/src/connections/: engine.rs  erd.rs  mod.rs  mysql.rs  oracle.rs  pool_manager.rs  postgres.rs  sqlite.rs  sqlserver.rs  ssh_tunnel.rs  types.rs
src-tauri/src/connections/engines/: mod.rs  mysql.rs  oracle.rs  postgres.rs  sqlite.rs  sqlserver.rs
src-tauri/src/db/: mod.rs  models.rs
src-tauri/src/db/migrations/: 0001_init.sql  0002_add_password.sql  0003_add_sqlite.sql  0004_add_virtual_relations.sql  0005_add_query_position.sql  0006_add_saved_query_database.sql  0007_add_speed_analysis.sql  0008_remove_pool_min.sql  0009_rename_ms_to_us.sql  0010_add_polymorphic_virtual_relations.sql  0011_add_query_notes.sql  0012_rename_notes_to_description.sql  0013_add_annotations.sql  0014_virtual_relations_unique.sql  0015_add_ping_interval.sql  0016_add_dashboards.sql  0017_add_sqlserver.sql  0018_add_oracle.sql  0019_add_safe_mode.sql  0020_add_query_history_source.sql
(+275 files in other folders)
