[package]
name = "rowmance"
version = "1.0.3"
description = "A keyboard-driven desktop database client for MySQL, MariaDB and PostgreSQL."
authors = []
edition = "2021"

[lib]
# The `_lib` suffix avoids a name conflict with the binary on Windows.
# See https://github.com/rust-lang/cargo/issues/8519
name = "rowmance_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
sqlx = { version = "0.8", features = [
  "mysql",
  "postgres",
  "sqlite",
  "runtime-tokio-rustls",
  "uuid",
  "chrono",
  "json",
] }
keyring = { version = "3", features = ["apple-native"] }
arboard = "3"
csv = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1"
thiserror = "2"
dashmap = "6"
chrono = { version = "0.4", features = ["serde"] }
sqlparser = "0.62.0"

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "2"
security-framework-sys = { version = "2", features = ["OSX_10_15"] }
core-foundation = "0.9"
core-foundation-sys = "0.8"
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = [
  "std",
  "NSButton",
  "NSControl",
  "NSView",
  "NSWindow",
], default-features = false }
objc2-foundation = { version = "0.3", features = ["std"], default-features = false }

[dev-dependencies]
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["mysql", "postgres"] }
tempfile = "3"
